--- a/composer.json
+++ b/composer.json
@@ -14,17 +14,9 @@
         "aliyuncs/oss-sdk-php": "2.3.*",
         "league/flysystem": "^1.0"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^6.0"
-    },
     "autoload": {
         "psr-4": {
-            "HuangYi\\Flysystem\\AliyunOSS\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "HuangYi\\Flysystem\\AliyunOSS\\": "tests"
+            "HuangYi\\FlysystemAliyunOss\\": "src"
         }
     }
 }
