--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,15 @@
             "email": "coodeer@163.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://gitee.com/huang-yi/aliyun-oss.git"
+        }
+    ],
     "require": {
         "php": "^7.0",
-        "aliyuncs/oss-sdk-php": "2.3.*",
+        "huang-yi/aliyun-oss": "^0.1",
         "league/flysystem": "^1.0"
     },
     "autoload": {
